<resources>
    <string name="app_name">Hotels</string>
    <string name="action_sort">Sort</string>
    <string name="internet_conn_err">Internet connection error. Please, try again later</string>
    <string name="title_activity_select_hotel">SelectHotelActivity</string>

    <string name="sort_by_distance">By distance from center</string>
    <string name="sort_by_countOfAvailableRooms">By count of available suites</string>

    <string name="hotel_name">Name: </string>
    <string name="hotel_address">Address: </string>
    <string name="hotel_stars">Stars: </string>
    <string name="hotel_distance">Distance from center: </string>
    <string name="hotel_suites">Count of available suites: </string>
    <string name="hotel_lat">lat: </string>
    <string name="hotel_lon">lon: </string>


    <string name="key_id">ID</string>
    <string name="key_name">NAME</string>
    <string name="key_adress">ADRESS</string>
    <string name="key_stars">STARS</string>
    <string name="key_distance">DISTANCE</string>
    <string name="key_suites">SUITES</string>
    <string name="key_img">IMG</string>
    <string name="key_lat">LAT</string>
    <string name="key_lon">LON</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
