<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp">
        <TextView
            android:id="@+id/textView_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_name"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_address"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
        <TextView
            android:id="@+id/textView_stars"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_stars"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
        <TextView
            android:id="@+id/textView_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_distance"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
        <TextView
            android:id="@+id/textView_suites"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_suites"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

</LinearLayout>